; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_access.c_bt_mesh_elem_find.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_access.c_bt_mesh_elem_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, %struct.bt_mesh_elem* }
%struct.bt_mesh_elem = type { i64 }

@dev_comp = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.bt_mesh_elem* @bt_mesh_elem_find(i64 %0) #0 {
  %2 = alloca %struct.bt_mesh_elem*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.bt_mesh_elem*, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 @BLE_MESH_ADDR_IS_UNICAST(i64 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %30

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dev_comp, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  %13 = load %struct.bt_mesh_elem*, %struct.bt_mesh_elem** %12, align 8
  %14 = getelementptr inbounds %struct.bt_mesh_elem, %struct.bt_mesh_elem* %13, i64 0
  %15 = getelementptr inbounds %struct.bt_mesh_elem, %struct.bt_mesh_elem* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = sub i64 %10, %16
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dev_comp, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ult i64 %18, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %9
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dev_comp, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  %26 = load %struct.bt_mesh_elem*, %struct.bt_mesh_elem** %25, align 8
  %27 = load i64, i64* %4, align 8
  %28 = getelementptr inbounds %struct.bt_mesh_elem, %struct.bt_mesh_elem* %26, i64 %27
  store %struct.bt_mesh_elem* %28, %struct.bt_mesh_elem** %2, align 8
  br label %54

29:                                               ; preds = %9
  store %struct.bt_mesh_elem* null, %struct.bt_mesh_elem** %2, align 8
  br label %54

30:                                               ; preds = %1
  store i64 0, i64* %4, align 8
  br label %31

31:                                               ; preds = %50, %30
  %32 = load i64, i64* %4, align 8
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dev_comp, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp ult i64 %32, %35
  br i1 %36, label %37, label %53

37:                                               ; preds = %31
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dev_comp, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 1
  %40 = load %struct.bt_mesh_elem*, %struct.bt_mesh_elem** %39, align 8
  %41 = load i64, i64* %4, align 8
  %42 = getelementptr inbounds %struct.bt_mesh_elem, %struct.bt_mesh_elem* %40, i64 %41
  store %struct.bt_mesh_elem* %42, %struct.bt_mesh_elem** %5, align 8
  %43 = load %struct.bt_mesh_elem*, %struct.bt_mesh_elem** %5, align 8
  %44 = load i64, i64* %3, align 8
  %45 = call i64 @bt_mesh_elem_find_group(%struct.bt_mesh_elem* %43, i64 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %37
  %48 = load %struct.bt_mesh_elem*, %struct.bt_mesh_elem** %5, align 8
  store %struct.bt_mesh_elem* %48, %struct.bt_mesh_elem** %2, align 8
  br label %54

49:                                               ; preds = %37
  br label %50

50:                                               ; preds = %49
  %51 = load i64, i64* %4, align 8
  %52 = add i64 %51, 1
  store i64 %52, i64* %4, align 8
  br label %31

53:                                               ; preds = %31
  store %struct.bt_mesh_elem* null, %struct.bt_mesh_elem** %2, align 8
  br label %54

54:                                               ; preds = %53, %47, %29, %23
  %55 = load %struct.bt_mesh_elem*, %struct.bt_mesh_elem** %2, align 8
  ret %struct.bt_mesh_elem* %55
}

declare dso_local i64 @BLE_MESH_ADDR_IS_UNICAST(i64) #1

declare dso_local i64 @bt_mesh_elem_find_group(%struct.bt_mesh_elem*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
